Fix header links alignement

--- a/_sass/header.scss
+++ b/_sass/header.scss
@@ -11,7 +11,6 @@
 
     &-link {
         padding: .75em;
-        display: flex;
 
         text-align: center;
 
